# hellow

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  hellow.cpp  hellow.hpp
test/: Makefile.am  Makefile.in  test_hellow.cpp
